# surgi-prompt

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default_prompts.yaml  tool_label_map.yaml
docs/: index.html  styles.css
docs/assets/results/: endoscapes_eval_subset_metrics.json  smoke_frame_overlay.json  smoke_video_summary.json  video_reground_summary.json
scripts/: download_checkpoints.sh  evaluate_dataset.py  evaluate_tracking.py  run_exhaustive_ablation.sh  run_image.py  run_video.py  step1_install_and_smoketest.sh  step2_class_aware_eval.sh  step3_video_reground.sh  train_grounding_dino.py  train_real_detector.sh  train_whole.sh
src/endotool/: __init__.py  pipeline.py  types.py
src/endotool/datasets/: __init__.py  coco.py  kvasir.py
src/endotool/eval/: metrics.py
src/endotool/models/: __init__.py  grounding_dino.py  sam2.py
src/endotool/utils/: io.py  labels.py  paths.py  tracking.py  visualization.py
