[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openvocab-surgical-tooling"
version = "0.1.0"
description = "Open-vocabulary surgical tool detection, segmentation, and tracking with Grounding DINO + SAM2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.9",
  "pillow>=10.0",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "torchmetrics[detection]>=1.4",
  "pycocotools>=2.0.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
